add css java final

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         Car Shop
     </h1>
    
-    <li><a href="HTML/sacand-page.html">Car Room</a></li>
+    <li><a href="sacand-page.html">Car Room</a></li>
     <li><a href="https://github.com/Qusai-Alnonah">Github</a></li>
   
     
